<resources>
    <string name="app_name">自动打包</string>
    <string name="app_version">1.0</string>
    <string name="app_id">1</string>
    <string name="template">100003</string>
     <string name="tenant_id">400001</string>
    <string name="qq_appid">1</string>
    <string name="app_channel">letv</string>
    <string name="base_neterror">网络请求失败</string>
    <string name="base_networkerror">当前网络不可用，请检查您的网络设置</string>
    <string name="base_no_network">网络未连接</string>
    <string name="base_networkerror2">请检查网络状态后重试</string>
    <string name="base_retry">重新再试</string>
    <string name="base_authtimeout">您的登录状态已失效，请重新登录</string>
    <string name="base_dataerror">数据加载失败</string>
    <string name="base_dataerror2">请稍后重试</string>
    <string name="base_nodata">暂无数据</string>
    <string name="base_nodata2">请刷新重试</string>
    <string name="boss_open">开通</string>
    <string name="boss_order_pay">确认支付</string>
    <string name="cdkey_active">激活</string>
    <string name="mine_getvip">开通会员</string>
    <string name="mine_renew">续费</string>
    <string name="mine_vip_renew">会员续费</string>
    <string name="play_backtomobile">恢复到手机观看</string>
    <string name="play_addetail">了解详情</string>
    <string name="play_choose">列表</string>
    <string name="play_local">本地</string>
    <string name="play_more">其他</string>
    <string name="play_screen">投屏</string>
    <string name="play_barrage">弹幕</string>
    <string name="play_download">缓存</string>
    <string name="play_share">分享</string>
    <string name="downloading">下载中&#8230;</string>
    <string name="downloadupadte">下载更新</string>
    <string name="alreadyinorder">已存在此下载任务</string>
    <string name="downloadok">下载完成</string>
    <string name="downlaodfailed">下载失败</string>
    <string name="gotnewversion">发现新版本%s</string>
    <string name="noweichat">您还没有安装微信客户端</string>
    <string name="noblog">您还没有安装微博客户端</string>
    <string name="share_ok">分享成功</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_error">错误:%s</string>
    <string name="userrefuse">用户拒绝授权！</string>
    <string name="usercancel">用户取消授权！</string>
    <string name="sharetext">分享</string>
    <string name="membercenter_text1">适合TV、Pad、手机、电脑多屏共享</string>
    <string name="membercenter_noad">无广告</string>
    <string name="membercenter_speed">播放速度</string>
    <string name="membercenter_hd">高清画质</string>
    <string name="membercenter_vip">VIP影片</string>
    <string name="membercenter_identity">身份标示</string>
    <string name="title_cdkey">兑换码</string>
    <string name="cdkey_notnull">兑换码不能为空</string>
    <string name="cdkey_faild">兑换码激活失败</string>
    <string name="cdkey_ok">兑换码激活成功</string>
    <string name="orderid">订单编号:%s</string>
    <string name="acttime">订单时间:%s</string>
    <string name="paynum">消费金额:￥%s</string>
    <string name="paystatus">消费状态:%s</string>
    <string name="pay_ok">成功</string>
    <string name="pay_faild">未支付</string>
    <string name="pay_all">全部</string>
    <string name="title_consume">消费记录</string>
    <string name="paramserror">参数填写不完整,请填写完整</string>
    <string name="pricerange">总金额应在0~999999.99之间 </string>
    <string name="title_member">会员中心</string>
    <string name="order_information">订单详情</string>
    <string name="order_pay">确认支付</string>
    <string name="order_price">应付金额：</string>
    <string name="order_price_rmb">元</string>
    <string name="order_num">订单编号：</string>
    <string name="order_expire">有效期：</string>
    <string name="order_expire_day">天</string>
    <string name="no_pay">该APP未开通支付功能</string>
    <string name="end_date">%s到期</string>
    <string name="continuepay">继续支付</string>
    <string name="tab1">首页</string>
    <string name="tab2">频道</string>
    <string name="tab3">发现</string>
    <string name="tab4">直播</string>
    <string name="tab5">我的</string>
    <string name="confirm">确定</string>
    <string name="exittip">再按一次退出程序</string>
    <string name="channel_title">频道管理</string>
    <string name="search">搜索</string>
    <string name="search_nper">期数</string>
    <string name="search_failed">搜索相关内容失败</string>
    <string name="search_contentfailed">获取搜索内容失败</string>
    <string name="search_nomore">没有更多数据了</string>
    <string name="search_noinput">没有输入任何内容</string>
    <string name="search_allover">全部</string>
    <string name="search_showtime">上映时间</string>
    <string name="search_starring">主演</string>
    <string name="search_director">导演</string>
    <string name="recommend_search_hint">请输入关键词</string>
    <string name="recommend_foot_title">新的世界</string>
    <string name="subject_title">专题</string>
    <string name="channel_noinput">没有输入任何内容</string>
    <string name="second">秒</string>
    <string name="mine_retrieve_password">找回密码</string>
    <string name="mine_retrieve_pwd_success">设置密码成功</string>
    <string name="register_checkcode">获取验证码</string>
    <string name="login_mine">点击登录</string>
    <string name="mine_get_vip">开通会员</string>
    <string name="collect_text">收藏</string>
    <string name="message_text">消息</string>
    <string name="history_text">最近在看</string>
    <string name="mine_setting">设置</string>
    <string name="mine_fankui">用户反馈</string>
    <string name="confrim_password">确认密码</string>
    <string name="new_password">新密码：</string>
    <string name="old_password">旧密码：</string>
    <string name="password_notempty">密码不能为空</string>
    <string name="confirm_error">您两次输入的密码不一致</string>
    <string name="channge_password">更改密码</string>
    <string name="resetpass_ok">重置密码成功</string>
    <string name="resetpass_failed">重置密码失败</string>
    <string name="logout">退出</string>
    <string name="logout_isclearrecord">是否将此账号的观看记录保存在本机中?</string>
    <string name="mine_dialog_ensure">确定</string>
    <string name="mine_dialog_cancel">取消</string>
    <string name="mine_dialog_save">保存</string>
    <string name="mine_dialog_dont_save">不保存</string>
    <string name="mine_male">男</string>
    <string name="mine_famale">女</string>
    <string name="mine_secret">保密</string>
    <string name="mine_allscreen_vip_endtime_text">(到期日期</string>
    <string name="mine_mobile_vip_endtime_text">移动影视会员(到期日期</string>
    <string name="mine_password_error">密码格式错误：请输入6-20位字母，数字或字符</string>
    <string name="mine_password_hint">请输入6-20位字母，数字或字符</string>
    <string name="mine_nickname_illegal_toast">昵称非法：4-32个字符，支持中英文、数字或“-”。注意：不能用纯数字和或“-”</string>
    <string name="mine_nickname_hint">4-32个字符，支持中英文、数字或“-”。注意：不能用纯数字和或“-”</string>
    <string name="mine_consume_record">消费记录</string>
    <string name="mine_change_password">修改密码</string>
    <string name="mine_sex_with_colon">性别</string>
    <string name="mine_nickname_with_colon">昵称</string>
    <string name="mine_vip_full_screen">全屏影视会员(到期日期2018-06-12)</string>
    <string name="mine_change_headimg">更换头像</string>
    <string name="mine_vip_center">会员中心</string>
    <string name="mine_subscibe">订阅</string>
    <string name="mine_offline_video">离线缓存</string>
    <string name="mine_play_record">观看记录</string>
    <string name="mine_allow_wifi_download">允许在非wifi网络下缓存</string>
    <string name="mine_receive_push_msg">接受推送消息</string>
    <string name="mine_clear_msg">清理缓存</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="input_content">请输入反馈内容</string>
    <string name="qqq">谢谢您的建议</string>
    <string name="comit_failed">用户反馈提交失败</string>
    <string name="mine_logout">注销</string>
    <string name="mine_select_all_or_none">全选/取消全选</string>
    <string name="mine_no_play_records">暂无观看记录</string>
    <string name="mine_not_play_videos">您还没有观看任何视频</string>
    <string name="mine_no_collections">暂无收藏记录</string>
    <string name="mine_no_collection_videos">您还没有收藏任何视频</string>
    <string name="mine_edit">编辑</string>
    <string name="mine_delete_with_bracket">删除(</string>
    <string name="mine_delete_failed">删除失败</string>
    <string name="mine_delete_success">删除成功</string>
    <string name="mine_clear_cache_failed">清除缓存失败</string>
    <string name="mine_not_save">不保存</string>
    <string name="mine_save">保存</string>
    <string name="mine_no_offline">暂无下载记录</string>
    <string name="mine_waiting">等待中</string>
    <string name="mine_downloading">下载中</string>
    <string name="mine_stopped">已暂停</string>
    <string name="mine_downloading_video_num">个视频/</string>
    <string name="mine_auto_jump">自动跳过片头片尾</string>
    <string name="mine_next">下一集</string>
    <string name="mine_play_with_space">"播放  "</string>
    <string name="mine_times">次</string>
    <string name="mine_date_form">yyyy年MM月dd日</string>
    <string name="mine_modify_date">修改资料</string>
    <string name="mine_info_abnormal">信息异常</string>
    <string name="mine_nickname">昵称</string>
    <string name="mine_female">女</string>
    <string name="mine_secret_sex">保密</string>
    <string name="mine_upload_headimg_failed">头像上传失败，请重试</string>
    <string name="mine_upload_abnormal">内容上传异常</string>
    <string name="mine_title">我的</string>
    <string name="mine_namehint">昵称</string>
    <string name="mine_lasttime">已看到</string>
    <string name="hot_search">热门搜索</string>
    <string name="history_search">搜索历史</string>
    <string name="history_clear">清空</string>
    <string name="history_load_more">更多>></string>
    <string name="search_cancel">取消</string>
    <string name="search_all">全网搜索</string>
    <string name="search_result_failed">网络连接失败，请检查网络设置</string>
    <string name="search_channel_all">全部</string>
    <string name="search_clear_dialg_title">清空最近搜索记录</string>
    <string name="offline_delete">删除</string>
    <string name="offline_complete">已完成</string>
    <string name="offline_waiting">等待中</string>
    <string name="check_all">全选</string>
    <string name="download_success">已完成</string>
    <string name="downlaod_waiting">等待中</string>
    <string name="downlaod_failed">失败</string>
    <string name="no_download_file">暂无离线文件</string>
    <string name="download_stop">暂停</string>
    <string name="mobile_if_download">目前是非wifi网络，是否缓存</string>
    <string name="check_update_dialog">检测到最新版本，是否更新</string>
    <string name="mine_offline_nocontent">视频缓存后，无网也能观看</string>
    <string name="download_netchange">已切换到非wifi网络,暂停视频下载</string>
    <string name="net_error_refresh">重新再试</string>
    <string name="share_string">我正在看:</string>
    <string name="search_hint">输入片名、导演、演员</string>
    <string name="pleasewait">敬请期待</string>
    <string name="discover_title">发现</string>
    <string name="cache">缓存</string>
    <string name="viewmore">向上滑动查看更多</string>
    <string name="second_short">秒</string>
    <string name="play_lastposition">播放至:%s</string>
    <string name="play_today">今天</string>
    <string name="play_try_and_see_6min">免费试看前6分钟，观看完整版请</string>
    <string name="play_pay_rightnow">立即购买</string>
    <string name="play_payed">" 已购买"</string>
    <string name="play_login_rightnow">立即登录</string>
    <string name="play_end_tryandsee_notice">试看结束，观看完整版请开通会员或购买单片</string>
    <string name="play_payed_or_vip">已购买或已是会员</string>
    <string name="play_login_to_see">登录观看</string>
    <string name="play_film_need_pay">该片为付费影片</string>
    <string name="play_single_end_tryandsee_notice">试看结束，观看完整版请购买单片</string>
    <string name="play_get_vip_with_comma">开通会员，</string>
    <string name="play_single_pay_for_half">优惠购买单片</string>
    <string name="play_vip_end_tryandsee_notice">试看结束，观看完整版请开通会员</string>
    <string name="play_is_vip">已是会员</string>
    <string name="play_is_vip_with_can">已是会员可</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="gallary">图库</string>
    <string name="take_pic">拍照</string>
    <string name="notice">提示</string>
    <string name="not_wifi_notice">网络处在非wifi环境下，是否继续观看？</string>
    <string name="cancel_watch">取消观看</string>
    <string name="continue_to_watch">继续播放</string>
    <string name="ensure_new_pwd">确认新密码：</string>
    <string name="ensure_new_password">确认新密码</string>
</resources>