<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/code07" >

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:gravity="center"
            android:textColor="@color/code3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="10dip"
            android:gravity="center"
            android:text="@string/not_wifi_notice"
            android:textColor="@color/code4" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/code03"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/cancel_watch"
            android:textColor="@color/code4"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/dialog_ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/code1"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/continue_to_watch"
            android:textColor="@color/code7"
            android:textSize="13dp" />
    </LinearLayout>

    

</LinearLayout>