<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:minWidth="@dimen/search_dialog_width"
    android:orientation="vertical"
   >

    <TextView
        android:id="@+id/clear_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/search_dialog_title_margintop"
        android:layout_marginLeft="@dimen/search_dialog_btn_marginleft"
        android:layout_marginRight="@dimen/search_dialog_btn_marginright"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/logout_isclearrecord"
        android:textColor="#888888"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/search_dialog_btn_margintop"
        android:background="@color/code03"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/mine_dialog_cancel"
        android:textColor="@color/code4"
        android:textSize="13dp" >

        <TextView
            android:id="@+id/negativeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/code03"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/mine_dialog_save"
            android:textColor="@color/code3"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/positiveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/code1"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/mine_dialog_dont_save"
            android:textColor="@color/code7"
            android:textSize="13dp" />
    </LinearLayout>

</LinearLayout>