<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/code09"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@color/code01"
        android:paddingLeft="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/old_password"
            android:textColor="@color/code3"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_oldpassword"
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/please_input_old_password"
            android:inputType="textPassword"
            android:textColor="@color/code4"
            android:textColorHint="@color/code9"
            android:textSize="14dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/code03" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/code01"
        android:paddingLeft="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/new_password"
            android:textColor="@color/code3"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_newpassword"
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/mine_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/code4"
            android:textColorHint="@color/code9"
            android:textSize="14dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/code03" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/code01"
        android:paddingLeft="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/ensure_new_pwd"
            android:textColor="@color/code3"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_confirm"
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/ensure_new_password"
            android:inputType="textPassword"
            android:textColor="@color/code4"
            android:textColorHint="@color/code9"
            android:textSize="14dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="45dp" >

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="310dp"
            android:layout_height="35dp"
            android:background="@drawable/mine_login_btn" >
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ensure"
            android:textColor="@color/code7"
            android:textSize="16dp" />
    </FrameLayout>

</LinearLayout>