<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_alignParentBottom="true"
        android:background="@color/player_shadow"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/player_tryandsee_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/control_seek"
            android:layout_below="@id/control_seek"
            android:layout_marginLeft="23dp"
            android:text="@string/play_try_and_see_6min"
            android:textColor="@color/code7"
            android:textSize="@dimen/player_tryandsee_desc_size" />

        <TextView
            android:id="@+id/tv_to_see_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/player_tryandsee_desc"
            android:text="@string/play_pay_rightnow"
            android:textColor="@color/code1"
            android:textSize="@dimen/player_tryandsee_buyvip_size" />

        <LinearLayout
            android:id="@+id/ll_payed_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_to_see_total" >

            <TextView
                android:id="@+id/tv_was_login_or_vip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_payed"
                android:textColor="@color/code7"
                android:textSize="@dimen/player_tryandsee_buyvip_size" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_was_login_or_vip"
                android:text="@string/play_login_rightnow"
                android:textColor="@color/code1"
                android:textSize="@dimen/player_tryandsee_buyvip_size" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>