<?xml version="1.0" encoding="utf-8"?>

<!-- 影片试看结束后，开通会员的页面。影片类型：单片非会员 -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/play_to_getvip_bg" >

    <Button
        android:id="@+id/control_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/play_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_film_need_pay"
                android:textColor="#ffffff"
                android:textSize="14dp"
                android:visibility="gone" >
            </TextView>

            <RelativeLayout
                android:id="@+id/rl_tryandsee_notice_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/tv_tryandsee_notice"
                    style="@style/NoticeAfterTryandseeWhite"
                    android:text="@string/play_single_end_tryandsee_notice" />
            </RelativeLayout>
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/tv_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/play_pay_some_money"
            android:gravity="center" >

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:textColor="#ffb80f"
                android:textSize="12dp" >
            </TextView>

            <TextView
                android:id="@+id/tv_price_to_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_price"
                android:textColor="#fff"
                android:text="yuan"
                android:textSize="12dp" >
            </TextView>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_vip_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_get_vip"
                style="@style/NoticeAfterTryandseeOrange"
                android:text="@string/play_get_vip_with_comma" >
            </TextView>

            <TextView
                style="@style/NoticeAfterTryandseeWhite"
                android:text="@string/play_single_pay_for_half" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/NoticeAfterTryandseeWhite"
                android:text="@string/play_payed_or_vip" >
            </TextView>

            <TextView
                android:id="@+id/tv_login"
                style="@style/NoticeAfterTryandseeOrange"
                android:text="@string/play_login_rightnow" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>